using System;

namespace SchoolSystem.Models
{
    public class Voucher
    {
        public int VoucherID { get; set; }

        public string VoucherNumber { get; set; }
        public string VoucherType { get; set; } // قبض / صرف

        public decimal Amount { get; set; }
        public DateTime VoucherDate { get; set; }

        public string PartyName { get; set; }
        public string Description { get; set; }

        public string PaymentMethod { get; set; }

        public string ReferenceType { get; set; } // عام / رسوم / مصروفات / رواتب / نقل / مكتبة
        public int? ReferenceID { get; set; }

        public string Notes { get; set; }

        public bool IsAutoGenerated { get; set; }

        public DateTime CreatedAt { get; set; }
    }
}
