erDiagram
    UserPermissions {
        INT UserPermissionID PK
        INT UserID FK
        INT PermissionID FK
        DATETIME GrantedAt 
        INT GrantedBy 
    }
    Users {
        NVARCHAR FullName 
        NVARCHAR PasswordHash 
        NVARCHAR PasswordSalt 
        NVARCHAR RoleName 
        NVARCHAR Permissions 
        NVARCHAR Email 
        NVARCHAR Phone 
        BIT IsActive 
        BIT MustChangePassword 
        INT FailedLoginAttempts 
        DATETIME LockedAt 
        DATETIME CreatedAt 
        DATETIME LastLoginAt 
        DATETIME UpdatedAt 
        INT UserID PK
        NVARCHAR UserName 
        NVARCHAR Password 
        NVARCHAR Role 
    }
    Permissions {
        INT PermissionID PK
        NVARCHAR PermissionKey 
        NVARCHAR DisplayName 
        NVARCHAR ModuleName 
        NVARCHAR ActionName 
        BIT IsActive 
        DATETIME CreatedAt 
    }
    StudentClasses {
        AS AcademicYearKey 
        NVARCHAR Section 
        DATETIME AssignedDate 
        INT AssignedBy 
        INT StudentClassID PK
        INT StudentID FK
        INT ClassID FK
        NVARCHAR AcademicYear 
    }
    StudentAttendance {
        AS AttendanceDay 
        TIME DepartureTime 
        NVARCHAR AbsenceReason 
        INT AttendanceID PK
        INT StudentID FK
        INT ClassID FK
        NVARCHAR Section 
        NVARCHAR AcademicYear 
        DATE AttendanceDate 
        NVARCHAR Status 
        TIME ArrivalTime 
        NVARCHAR ExcuseStatus 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    TeacherAttendance {
        AS AttendanceDay 
        INT AttendanceID PK
        INT TeacherID 
        DATE AttendanceDate 
        NVARCHAR Status 
        INT LateMinutes 
        INT EarlyLeaveMinutes 
        DECIMAL WorkHours 
        NVARCHAR AbsenceReason 
        NVARCHAR Notes 
        DATETIME RecordedAt 
        DATETIME UpdatedAt 
        TIME CheckInTime 
        TIME CheckOutTime 
    }
    SchoolSections {
        INT Capacity 
        NVARCHAR AllowedGender 
        CK CONSTRAINT 
        INT SectionID PK
        INT ClassID FK
        NVARCHAR SectionName 
        NVARCHAR AcademicYear 
        BIT IsActive 
        DATETIME CreatedAt 
    }
    AuditLogs {
        BIGINT AuditLogID PK
        INT UserID FK
        NVARCHAR UserName 
        NVARCHAR ActionName 
        NVARCHAR EntityName 
        NVARCHAR EntityID 
        NVARCHAR Details 
        DATETIME CreatedAt 
        NVARCHAR Module 
        NVARCHAR MachineName 
        NVARCHAR IpAddress 
    }
    Rooms {
        INT CreatedByUserID FK
        INT RoomID PK
        NVARCHAR RoomCode 
        NVARCHAR RoomName 
        NVARCHAR RoomType 
        INT Capacity 
        NVARCHAR Location 
        BIT IsActive 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    Classes {
        INT RoomID FK
        INT ClassID PK
        NVARCHAR ClassCode 
        NVARCHAR ClassName 
        NVARCHAR StageName 
        INT GradeOrder 
        BIT IsActive 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    Expenses {
        INT CreatedByUserID FK
        INT ExpenseID PK
        NVARCHAR ExpenseNumber 
        DECIMAL Amount 
        DATE ExpenseDate 
        NVARCHAR Category 
        NVARCHAR PayeeName 
        NVARCHAR PaymentMethod 
        NVARCHAR Description 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    Vouchers {
        INT CreatedByUserID FK
        INT VoucherID PK
        NVARCHAR VoucherNumber 
        NVARCHAR VoucherType 
        DECIMAL Amount 
        DATE VoucherDate 
        NVARCHAR PartyName 
        NVARCHAR Description 
        NVARCHAR PaymentMethod 
        NVARCHAR ReferenceType 
        INT ReferenceID 
        NVARCHAR Notes 
        BIT IsAutoGenerated 
        DATETIME CreatedAt 
    }
    Enrollments {
        INT EnrollmentID PK
        INT StudentID FK
        DATE ApplicationDate 
        NVARCHAR ApplicationType 
        NVARCHAR AcademicYear 
        INT ClassID FK
        NVARCHAR Section 
        NVARCHAR SeatNumber 
        NVARCHAR Status 
        NVARCHAR PreviousSchool 
        NVARCHAR PreviousClass 
        NVARCHAR TransferReason 
        DECIMAL RegistrationFee 
        DECIMAL PaidAmount 
        NVARCHAR PaymentMethod 
        NVARCHAR ReceiptNo 
        BIT HasBirthCertificate 
        BIT HasGuardianId 
        BIT HasPhoto 
        BIT HasLastCertificate 
        BIT HasMedicalReport 
        NVARCHAR GeneralNotes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    Students {
        INT ClassID 
        NVARCHAR Section 
        NVARCHAR AcademicYear 
        NVARCHAR Phone 
        NVARCHAR StudentNumber 
        NVARCHAR FullName 
        NVARCHAR BirthPlace 
        NVARCHAR Nationality 
        NVARCHAR NationalId 
        NVARCHAR StudentPhone 
        NVARCHAR Status 
        NVARCHAR GuardianName 
        NVARCHAR GuardianRelation 
        NVARCHAR GuardianPhone 
        NVARCHAR GuardianEmail 
        NVARCHAR GuardianJob 
        NVARCHAR Governorate 
        NVARCHAR District 
        NVARCHAR Address 
        VARBINARY Photo 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
        INT StudentID PK
        NVARCHAR Gender 
        DATE BirthDate 
        NVARCHAR StudentName 
    }
    Grades {
        INT GradeID PK
        INT StudentID 
        INT SubjectID 
        INT ClassID 
        NVARCHAR Section 
        NVARCHAR AcademicYear 
        NVARCHAR TermName 
        DECIMAL Quiz1 
        DECIMAL Quiz2 
        DECIMAL CourseWork 
        DECIMAL FinalExam 
        DECIMAL GradeValue 
        NVARCHAR GradeLetter 
        NVARCHAR ResultStatus 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    Books {
        INT BookID PK
        NVARCHAR Title 
        NVARCHAR Author 
        NVARCHAR ISBN 
        NVARCHAR Category 
        NVARCHAR Publisher 
        INT PublicationYear 
        INT Copies 
        INT AvailableCopies 
        NVARCHAR ShelfLocation 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
        BIT IsActive 
    }
    BookBorrowings {
        INT BorrowingID PK
        INT BookID FK
        NVARCHAR BorrowerType 
        INT BorrowerID 
        DATE BorrowDate 
        DATE DueDate 
        DATE ReturnDate 
        NVARCHAR Status 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    SchoolTimetable {
        INT TimetableID PK
        INT ClassID 
        NVARCHAR Section 
        INT SubjectID 
        INT TeacherID 
        NVARCHAR AcademicYear 
        NVARCHAR TermName 
        NVARCHAR DayName 
        INT PeriodNo 
        TIME StartTime 
        TIME EndTime 
        NVARCHAR RoomName 
        NVARCHAR Notes 
        BIT IsActive 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    TeacherContracts {
        INT ContractID PK
        INT TeacherID 
        NVARCHAR ContractNumber 
        NVARCHAR ContractType 
        NVARCHAR ContractStatus 
        DECIMAL BasicSalary 
        DECIMAL HousingAllowance 
        DECIMAL TransportAllowance 
        DECIMAL OtherAllowances 
        DECIMAL Deductions 
        AS TotalSalary 
        AS NetSalary 
        DATE StartDate 
        DATE EndDate 
        NVARCHAR PaymentMethod 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    FeePlans {
        INT FeePlanID PK
        NVARCHAR AcademicYear 
        INT ClassID 
        NVARCHAR FeeType 
        DECIMAL Amount 
        DATE DueDate 
        BIT IsRequired 
        NVARCHAR Notes 
        DATETIME CreatedAt 
    }
    Fees {
        INT FeeID PK
        INT StudentID 
        INT FeePlanID 
        NVARCHAR AcademicYear 
        NVARCHAR FeeType 
        DECIMAL TotalAmount 
        DECIMAL DiscountAmount 
        DECIMAL NetAmount 
        DECIMAL PaidAmount 
        DECIMAL RemainingAmount 
        DATE DueDate 
        DATE PaymentDate 
        NVARCHAR PaymentMethod 
        NVARCHAR ReceiptNumber 
        NVARCHAR Status 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    Payroll {
        INT PayrollID PK
        INT TeacherID 
        INT SalaryMonth 
        INT SalaryYear 
        DECIMAL BasicSalary 
        DECIMAL Allowances 
        DECIMAL Deductions 
        AS NetSalary 
        DATE PaymentDate 
        NVARCHAR Notes 
        DATETIME CreatedAt 
    }
    Receipts {
        INT ReceiptID PK
        NVARCHAR ReceiptNumber 
        INT StudentID 
        DECIMAL Amount 
        DATE ReceiptDate 
        NVARCHAR PaymentMethod 
        NVARCHAR Description 
        NVARCHAR Notes 
        DATETIME CreatedAt 
    }
    StudentFees {
        INT StudentFeeID PK
        INT StudentID 
        NVARCHAR FeeType 
        NVARCHAR AcademicYear 
        DECIMAL Amount 
        DECIMAL PaidAmount 
        NVARCHAR Status 
        NVARCHAR Notes 
        DATETIME CreatedAt 
    }
    Subjects {
        NVARCHAR SubjectCode 
        INT ClassID 
        DECIMAL MaxDegree 
        DECIMAL PassDegree 
        BIT IsActive 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
        INT SubjectID PK
        NVARCHAR SubjectName 
    }
    Buses {
        INT BusID PK
        NVARCHAR BusNumber 
        NVARCHAR DriverName 
        NVARCHAR DriverPhone 
        INT Capacity 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    BusRoutes {
        INT RouteID PK
        NVARCHAR RouteName 
        INT BusID FK
        NVARCHAR StartPoint 
        NVARCHAR EndPoint 
        TIME DepartureTime 
        TIME ArrivalTime 
        DECIMAL Fee 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    Roles {
        INT RoleID PK
        NVARCHAR RoleName 
        NVARCHAR Description 
        BIT IsSystemRole 
        BIT IsActive 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
    }
    UserRoles {
        INT UserID FK
        INT RoleID FK
        DATETIME AssignedAt 
        INT AssignedBy 
    }
    RolePermissions {
        INT RoleID FK
        INT PermissionID FK
        DATETIME GrantedAt 
        INT GrantedBy 
    }
    Teachers {
        NVARCHAR FullName 
        NVARCHAR EmployeeNumber 
        NVARCHAR Gender 
        DATE BirthDate 
        NVARCHAR BirthPlace 
        NVARCHAR Nationality 
        NVARCHAR Phone 
        NVARCHAR NationalID 
        NVARCHAR Email 
        NVARCHAR Qualification 
        NVARCHAR Specialization 
        NVARCHAR Address 
        DATE HireDate 
        DECIMAL BasicSalary 
        DECIMAL TransportAllowance 
        DECIMAL HousingAllowance 
        NVARCHAR Status 
        NVARCHAR Notes 
        DATETIME CreatedAt 
        DATETIME UpdatedAt 
        INT TeacherID PK
        NVARCHAR TeacherName 
    }
    Marks {
        INT MarkID PK
        INT StudentID FK
        INT SubjectID FK
        INT TeacherID FK
        DECIMAL Mark 
        NVARCHAR ExamType 
        DATETIME CreatedAt 
    }
    Users ||--o{ UserPermissions : relates
    Permissions ||--o{ UserPermissions : relates
    Students ||--o{ Enrollments : relates
    Classes ||--o{ Enrollments : relates
    Rooms ||--o{ Classes : relates
    Users ||--o{ AuditLogs : relates
    Users ||--o{ Rooms : relates
    Users ||--o{ Expenses : relates
    Users ||--o{ Vouchers : relates
    Classes ||--o{ SchoolSections : relates
    Books ||--o{ BookBorrowings : relates
    Buses ||--o{ BusRoutes : relates
    Students ||--o{ StudentAttendance : relates
    Classes ||--o{ StudentAttendance : relates
    Users ||--o{ UserRoles : relates
    Roles ||--o{ UserRoles : relates
    Roles ||--o{ RolePermissions : relates
    Permissions ||--o{ RolePermissions : relates
    Students ||--o{ StudentClasses : relates
    Classes ||--o{ StudentClasses : relates
    Students ||--o{ Marks : relates
    Subjects ||--o{ Marks : relates
    Teachers ||--o{ Marks : relates
